--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-385.7KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.44MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-850.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-12.25MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
   - {name: 🇺🇸 美国-10.25MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20718, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-17.16MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-933.1KB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: sgg.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-457.9KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇺🇸 美国-10.13MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-319.7KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-11.44MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.74MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-385.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-850.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-385.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-850.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-385.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-850.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-385.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-850.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-385.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-850.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-385.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-850.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-385.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-850.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
