--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇺🇸 美国-10.25MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20718, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-699.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-173.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-933.1KB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: sgg.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-457.9KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇺🇸 美国-10.13MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-319.7KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-933.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
