--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-699.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-173.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-10.13MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-319.7KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
   - {name: 🇺🇸 美国-11.44MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-12.25MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-175.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6003, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-259.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-10.74MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-2.95MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-733.9KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 未知国家-1.87MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
+      - 未知国家-1.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
+      - 未知国家-1.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
+      - 未知国家-1.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-175.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
+      - 未知国家-1.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
+      - 未知国家-1.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
+      - 未知国家-1.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇫🇷 法国-699.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-173.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-5.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-885.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-11.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-12.25MB/s(Youtube:不良林)
+      - 🇭🇰 香港-175.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-733.9KB/s(Youtube:不良林)
+      - 未知国家-1.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
